--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <ul>
+        <li><a href="#home">Principal</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#portifolio">Portifólio</a></li>
+    </ul>
 </body>
 </html>
