Adiciona mais páginas

--- a/sobre.html
+++ b/sobre.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <ul>
-        <li><a class="selecionado" href="index.html">Principal</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="index.html">Principal</a></li>
+        <li><a class="selecionado" href="sobre.html">Sobre</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="trabalho.html">Trabalho</a></li>
     </ul>
