--- a/trabalho.html
+++ b/trabalho.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <ul>
-        <li><a class="selecionado" href="index.html">Principal</a></li>
+        <li><a href="index.html">Principal</a></li>
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="formacao.html">Formação</a></li>
-        <li><a href="trabalho.html">Trabalho</a></li>
+        <li><a class="selecionado" href="trabalho.html">Trabalho</a></li>
     </ul>
 </body>
 </html>
