--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <ul>
-        <li><a class="selecionado" href="index.html">Principal</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="formacao.html">Formação</a></li>
-        <li><a href="trabalho.html">Trabalho</a></li>
-    </ul>
+    <!-- Menu do cabeçalho -->
+    <div class="cabecalho">
+        <ul>
+            <li><a class="selecionado" href="index.html">Principal</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="formacao.html">Formação</a></li>
+            <li><a href="trabalho.html">Trabalho</a></li>
+        </ul>
+    </div>
+
+    <!-- Corpo da página -->
+    <div class="corpo">
+        Corpo
+    </div>
+
+    <!-- Rodapé da página -->
+    <div class="rodape">
+dasdasd
+    </div>
+
 </body>
+
 </html>
