Melhora estrutura do esqueleto

--- a/formacao.html
+++ b/formacao.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <ul>
-        <li><a href="index.html">Principal</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a class="selecionado" href="formacao.html">Formação</a></li>
-        <li><a href="trabalho.html">Trabalho</a></li>
-    </ul>
+    <!-- Menu do cabeçalho -->
+    <div class="cabecalho">
+        <ul>
+            <li><a href="index.html">Principal</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a class="selecionado" href="formacao.html">Formação</a></li>
+            <li><a href="trabalho.html">Trabalho</a></li>
+        </ul>
+    </div>
+
+    <!-- Corpo da página -->
+    <div class="corpo">
+        <p>Este site foi desenvolvido para a matéria de <b>FERRAMENTAS DE DESENVOLVIMENTO WEB</b></p>
+        <p>Para o desenvolvimento do mesmo, foi utilizado o Visual Studio Code como IDE de desenvolvimento e HTML e CSS
+            como técnologia.</p>
+    </div>
+
+    <!-- Rodapé da página -->
+    <div class="rodape">
+        dasdasd
+    </div>
+
 </body>
+
 </html>
