--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        Corpo
+        <p>Este site foi desenvolvido para a matéria de <b>FERRAMENTAS DE DESENVOLVIMENTO WEB</b></p>
+        <p>Para o desenvolvimento do mesmo, foi utilizado o Visual Studio Code como IDE de desenvolvimento e HTML e CSS
+            como técnologia.</p>
     </div>
 
     <!-- Rodapé da página -->
     <div class="rodape">
-dasdasd
+        dasdasd
     </div>
 
 </body>
