--- a/portifolio.html
+++ b/portifolio.html
@@ -12,10 +12,10 @@
     <!-- Menu do cabeçalho -->
     <div class="cabecalho">
         <ul>
-            <li><a href="index.html">Principal</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="index.html">Sobre mim</a></li>
             <li><a href="formacao.html">Formação</a></li>
-            <li><a class="selecionado" href="trabalho.html">Trabalho</a></li>
+            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </div>
 
@@ -28,7 +28,7 @@
 
     <!-- Rodapé da página -->
     <div class="rodape">
-        dasdasd
+        Site desenvolvido por Samoel Dewes
     </div>
 
 </body>
