--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <p>Este site foi desenvolvido para a matéria de <b>FERRAMENTAS DE DESENVOLVIMENTO WEB</b></p>
-        <p>Para o desenvolvimento do mesmo, foi utilizado o Visual Studio Code como IDE de desenvolvimento e HTML e CSS
-            como técnologia.</p>
+        <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas a 5 anos na empresa <b>Sysmo Sistemas</b></p>
     </div>
 
     <!-- Rodapé da página -->
