--- a/formacao.html
+++ b/formacao.html
@@ -21,9 +21,15 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <p>Este site foi desenvolvido para a matéria de <b>FERRAMENTAS DE DESENVOLVIMENTO WEB</b></p>
-        <p>Para o desenvolvimento do mesmo, foi utilizado o Visual Studio Code como IDE de desenvolvimento e HTML e CSS
-            como técnologia.</p>
+        <dt>Superior:</dt>
+        <dd>Gestão financeira - Formado</dd>
+        <dd>Análise e desenvolvimento de sistemas - Cursando</dd>
+        <br>
+        <dt>Outros</dt>
+        <dd>Desenvolvedor Web Master</dd>
+        <dd>Delphi Avançado</dd>
+        <dd>Manutenção de Hardware</dd>
+        <dd>Photoshop Design</dd>
     </div>
 
     <!-- Rodapé da página -->
