--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas a 5 anos na empresa <b>Sysmo Sistemas</b></p>
+        <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas de informação a 5
+            anos na empresa <b>Sysmo Sistemas</b></p>
+        <p></p>
     </div>
 
     <!-- Rodapé da página -->
