--- a/formacao.html
+++ b/formacao.html
@@ -24,12 +24,15 @@
         <dt>Superior:</dt>
         <dd>Gestão financeira - Formado</dd>
         <dd>Análise e desenvolvimento de sistemas - Cursando</dd>
+
         <br>
-        <dt>Outros</dt>
+
+        <dt>Técnico:</dt>
         <dd>Desenvolvedor Web Master</dd>
         <dd>Delphi Avançado</dd>
         <dd>Manutenção de Hardware</dd>
         <dd>Photoshop Design</dd>
+        <dd>Técnico em Informática</dd>
     </div>
 
     <!-- Rodapé da página -->
