--- a/formacao.html
+++ b/formacao.html
@@ -21,18 +21,20 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <dt>Superior:</dt>
-        <dd>Gestão financeira - Formado</dd>
-        <dd>Análise e desenvolvimento de sistemas - Cursando</dd>
+        <div class="conteudo">
+            <dt>Superior</dt>
+            <dd>Gestão financeira - Formado</dd>
+            <dd>Análise e desenvolvimento de sistemas - Cursando</dd>
 
-        <br>
+            <br>
 
-        <dt>Técnico:</dt>
-        <dd>Desenvolvedor Web Master</dd>
-        <dd>Delphi Avançado</dd>
-        <dd>Manutenção de Hardware</dd>
-        <dd>Photoshop Design</dd>
-        <dd>Técnico em Informática</dd>
+            <dt>Técnico</dt>
+            <dd>Desenvolvedor Web Master</dd>
+            <dd>Delphi Avançado</dd>
+            <dd>Manutenção de Hardware</dd>
+            <dd>Photoshop Design</dd>
+            <dd>Técnico em Informática</dd>
+        </div>
     </div>
 
     <!-- Rodapé da página -->
