--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas de informação a 5
-            anos na empresa <b>Sysmo Sistemas</b></p>
+        <div class="conteudo">
+            <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas de informação a
+                5 anos na empresa <b>Sysmo Sistemas.</b></p>
+            <p>Nas horas vagas sou investidor na bolsa de valores, realizando estudos sobre prospectivas de ações.</p>
+        </div>
     </div>
 
     <!-- Rodapé da página -->
