--- a/portifolio.html
+++ b/portifolio.html
@@ -21,9 +21,16 @@
 
     <!-- Corpo da página -->
     <div class="corpo">
-        <p>Este site foi desenvolvido para a matéria de <b>FERRAMENTAS DE DESENVOLVIMENTO WEB</b></p>
-        <p>Para o desenvolvimento do mesmo, foi utilizado o Visual Studio Code como IDE de desenvolvimento e HTML e CSS
-            como técnologia.</p>
+        <div class="conteudo">
+            <p>Durante o curso desenvolvi um aplicativo de localização de lixeiras utilizando <b>Google Maps</b> e a
+                linguagem <b>Delphi</b>.</p>
+            <br>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/D2QSGQOX6OU"></iframe>
+            <p>Também é possível visitar meu Github clicando na imagem abaixo:</p>
+            <a href="https://github.com/SamoelDewes">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Imagem github">
+            </a>
+        </div>
     </div>
 
     <!-- Rodapé da página -->
