Corrige aba selecionada

--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
             <li><a href="index.html">Sobre mim</a></li>
             <li><a href="formacao.html">Formação</a></li>
             <li><a href="portifolio.html">Portifólio</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a class="selecionado" href="contato.html">Contato</a></li>
         </ul>
     </div>
 
@@ -29,7 +29,7 @@
             <input type="email" id="email" name="email" required><br><br>
 
             <label for="conteudo">Conteúdo:</label><br>
-            <textarea id="conteudo" name="conteudo" rows="4" cols="50" required></textarea><br><br>
+            <textarea id="conteudo" name="conteudo" rows="5" cols="50" required></textarea><br><br>
 
             <input type="submit" value="Enviar">
         </div>
