--- a/formacao.html
+++ b/formacao.html
@@ -13,7 +13,7 @@
     <div class="cabecalho">
         <ul>
             <li><a href="index.html">Sobre mim</a></li>
-            <li><a href="formacao.html">Formação</a></li>
+            <li><a class="selecionado" href="formacao.html">Formação</a></li>
             <li><a href="portifolio.html">Portifólio</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
