--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Menu do cabeçalho -->
     <div class="cabecalho">
         <ul>
-            <li><a href="index.html">Sobre mim</a></li>
+            <li><a class="selecionado" href="index.html">Sobre mim</a></li>
             <li><a href="formacao.html">Formação</a></li>
             <li><a href="portifolio.html">Portifólio</a></li>
             <li><a href="contato.html">Contato</a></li>
