--- a/portifolio.html
+++ b/portifolio.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Sobre mim</a></li>
             <li><a href="formacao.html">Formação</a></li>
-            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a class="selecionado" href="portifolio.html">Portifólio</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </div>
