Corrige descrição de curso

--- a/formacao.html
+++ b/formacao.html
@@ -32,7 +32,7 @@
             <dd>Desenvolvedor Web Master</dd>
             <dd>Delphi Avançado</dd>
             <dd>Manutenção de Hardware</dd>
-            <dd>Photoshop Design</dd>
+            <dd>Photoshop Avançado</dd>
             <dd>Técnico em Informática</dd>
         </div>
     </div>
