--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <!-- Menu do cabeçalho -->
     <div class="cabecalho">
@@ -25,6 +23,7 @@
             <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas de informação a
                 5 anos na empresa <b>Sysmo Sistemas.</b></p>
             <p>Nas horas vagas sou investidor na bolsa de valores, realizando estudos sobre prospectivas de ações.</p>
+            <img class="img-perfil" src="samoel.jpeg" alt="foto pessoal">
         </div>
     </div>
 
@@ -32,7 +31,5 @@
     <div class="rodape">
         Site desenvolvido por Samoel Dewes
     </div>
-
 </body>
-
 </html>
