--- a/portifolio.html
+++ b/portifolio.html
@@ -28,7 +28,7 @@
             <iframe width="420" height="315" src="https://www.youtube.com/embed/D2QSGQOX6OU"></iframe>
             <p>Também é possível visitar meu Github clicando na imagem abaixo:</p>
             <a href="https://github.com/SamoelDewes">
-                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Imagem github">
+                <img class="img-github" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Imagem github">
             </a>
         </div>
     </div>
