--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Corpo da página -->
     <div class="corpo">
         <div class="conteudo">
-            <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como desenvolvedor de sistemas de informação a
+            <p>Me chamo Samoel Dewes, tenho 25 anos e atualmente trabalho como Desenvolvedor de Sistemas de Informação a
                 5 anos na empresa <b>Sysmo Sistemas.</b></p>
             <p>Nas horas vagas sou investidor na bolsa de valores, realizando estudos sobre prospectivas de ações.</p>
             <img class="img-perfil" src="samoel.jpeg" alt="foto pessoal">
